--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1046,6 +1046,9 @@ literate=
 {§}{{\ucc{\S}}}{1}
 {⟨}{{\ucc{${\langle}$}}}{1}
 {⟩}{{\ucc{${\rangle}$}}}{1}
+{→}{{\ucc{${\rightarrow}$}}}{1}
+{←}{{\ucc{${\leftarrow}$}}}{1}
+% {⩪}{{\ucc{${\dot\mathtt{\sim}}$}}}{1}
 %
 % box drawing characters
 %
