--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -40,7 +40,7 @@
 
 % \usepackage[final]{mylistings}
 \usepackage[final]{listings}
-\usepackage[charsperline=94, usebox=false]{jlcode}
+\usepackage[charsperline=94, usebox=false, usecolors=false]{jlcode}
 
 
 %-------------------------------------------------------------------------------
@@ -258,7 +258,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{tracking_models}
+\includeonly{tracking_models}
 
 \begin{document}
 \chapterstyle{hangnum}
