--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -437,6 +437,17 @@
   langid = {english}
 }
 
+@article{gansner2000open,
+  title = {An Open Graph Visualization System and Its Applications to Software Engineering},
+  author = {Gansner, Emden R and North, Stephen C},
+  date = {2000},
+  journaltitle = {Software: practice and experience},
+  volume = {30},
+  pages = {1203--1233},
+  file = {/home/philipp/Zotero/storage/Y8KS8XZL/Gansner and North - 2000 - An open graph visualization system and its applica.pdf},
+  number = {11}
+}
+
 @inproceedings{ge2018turing,
   title = {Turing: {{A Language}} for {{Flexible Probabilistic Inference}}},
   shorttitle = {Turing},
