Change some hyperref things

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -6,16 +6,12 @@
 \newcommand{\longtitle}{Automatic Graph Tracking in Probabilistic Programs via Source Transformations}
 
 % LINKS AND PDF OPTIONS
-\usepackage[final]{hyperref}
+\usepackage[pdfa,final]{hyperref}
 \hypersetup{
   pdfinfo={
     Author={Philipp Gabler},
     Title={\longtitle}
   },
-  colorlinks=true,
-  citecolor=textblue,
-  linkcolor=textblue,
-  urlcolor=textblue,
   hyperfootnotes=false
 }
 
@@ -301,7 +297,7 @@
 % TOC
 \cleartorecto
 \begingroup
-\hypersetup{linkcolor=black, hyperindex=true}
+\hypersetup{hyperindex=true}
 \label{toc}
 \currentpdfbookmark{Contents}{toc}
 \tableofcontents*
@@ -333,7 +329,7 @@
 \backmatter
 
 \begingroup
-\hypersetup{linkcolor=black, hyperindex=true}
+\hypersetup{hyperindex=true}
 \listofalgorithms
 \endgroup
 
