Write discussion stuff

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -254,7 +254,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{tracking_models}
+% \includeonly{discussion}
 
 \begin{document}
 \chapterstyle{hangnum}
