--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -209,6 +209,10 @@ end
 
 Gibbs sampler implementation for Turing; likelihood closures; conditional likelihood extraction
 
+This currently is implemented as a separate sampler (due to versioning), but the Gibbs conditional
+functionality has been added to \turingjl{} itself and should be used instead for static
+conditionals.
+
 
 \section{Evaluation}
 \label{sec:autogibbs-eval}
